objects/CareProgram.object
<CustomObject>
    <fields>
        <fullName>HC_fld_checkEdadLimiteContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Con Edad Limite de Contratación?</description>
        <label>¿Con Edad Limite de Contratación?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_fld_checkEdadMaxPerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Edad Máxima de Permanencia?</description>
        <label>¿Edad Máxima de Permanencia?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_fld_checkPeriodoCarencia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Con Periodos de Carencia?</description>
        <label>¿Con Periodos de Carencia?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_fld_descFormPagoAnual__c</fullName>
        <description>Descuentos por Forma de Pago Anual</description>
        <label>Descuentos por Forma de Pago Anual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HC_fld_descFormPagoTrimestral__c</fullName>
        <description>Descuentos por Forma de Pago Trimestral</description>
        <label>Descuentos por Forma de Pago Trimestral</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HC_fld_edadLimiteContratacion__c</fullName>
        <description>Edad Límite de Contratación</description>
        <label>Edad Límite de Contratación</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_periodoCarenciaDiagAltaTec__c</fullName>
        <description>Periodo Carencia Diagnóstico de alta tecnología</description>
        <label>Periodo Carencia Diagnóstico de alta tec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HC_pl_periodoCarencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_periodoCarenciaPodologia__c</fullName>
        <description>Periodo Carencia Podología</description>
        <label>Periodo Carencia Podología</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HC_pl_periodoCarencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_periodoCarenciaPrepAsistParto__c</fullName>
        <description>Periodo Carencia Preparación y asistencia al parto</description>
        <label>Periodo Carencia Preparación y asistenci</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HC_pl_periodoCarencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_periodoCarenciaTratEsp__c</fullName>
        <description>Periodo Carencia Tratamientos especiales</description>
        <label>Periodo Carencia Tratamientos especiales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HC_pl_periodoCarencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_periodoCarenciaTratInfertilidad__c</fullName>
        <description>Periodo Carencia Tratamiento infertilidad</description>
        <label>Periodo Carencia Tratamiento infertilida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HC_pl_periodoCarencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Monitoring_Duration_Days__c</fullName>
        <label>Monitoring Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_CarePrograms</fullName>
        <filterScope>Everything</filterScope>
        <label>All Care Programs</label>
    </listViews>
    <recordTypes>
        <fullName>Care_Program</fullName>
        <active>true</active>
        <label>Care Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>HC_rt_seguroSalud</fullName>
        <active>true</active>
        <description>Programa Seguro Salud</description>
        <label>Programa Seguro Salud</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>